# Rust-Meeting

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs
src/routes/: discussion.rs  feedback.rs  invitation.rs  la.rs  lecture.rs  mod.rs  user.rs
static/: invites.html  lecture-room-audience.html  lecture-room-organizer.html  lecture-room-speaker.html  lecture_detail.html  lecture_list.html  lecture_speaker.html  lecture_user.html  login.html  person.html  question.html  register.html  speech_info.html
static/uploads/: 660b4e59-2607-464d-8dcd-52c7cc4f5b0djpg  8f27c7f7-7f89-41b4-b02b-648fabb839bfjpg  9d19b307-0e65-4734-bc72-2997e15e6beapng
