[package]
name = "rust_meeting"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros", "json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "normalize-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.0", features = ["tokio-sync"] }
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.15"
regex = "1.0"
once_cell = "1.17"
thiserror = "1.0"
rand = "0.8"